# -Programming-Basics-CPP2-CLion

./: README.md
-Programming-Basics-CPP 10.1/lib/: greeting_library.cpp  greeting_library.h
-Programming-Basics-CPP 11.1/: CMakeLists.txt  main.cpp
-Programming-Basics-CPP 11.1/lib/: greeting_library.cpp  greeting_library.h
-Programming-Basics-CPP 11.2/: CMakeLists.txt  main.cpp
-Programming-Basics-CPP 11.2/lib/: leave_lib.cpp  leave_lib.h
-Programming-Basics-CPP 11.3/: CMakeLists.txt
-Programming-Basics-CPP 3.1/: CMakeLists.txt  README.md  main.cpp
-Programming-Basics-CPP 3.2/: CMakeLists.txt  README.md  main.cpp
-Programming-Basics-CPP 4.1/: .gitignore  CMakeLists.txt  README.md  main.cpp
-Programming-Basics-CPP 4.2/: CMakeLists.txt  README.md  main.cpp
-Programming-Basics-CPP 5.1/: CMakeLists.txt  README.md  main.cpp
-Programming-Basics-CPP 6.1/: CMakeLists.txt  README.md  main.cpp
-Programming-Basics-CPP 6.1/math/: math.cpp  math.h
-Programming-Basics-CPP 6.1/output/: output.cpp  output.h
-Programming-Basics-CPP 6.2/: CMakeLists.txt  README.md  main.cpp
-Programming-Basics-CPP 6.2/counter/: counter.cpp  counter.h
-Programming-Basics-CPP 6.3/: CMakeLists.txt  README.md  main.cpp
-Programming-Basics-CPP 6.3/Figure/A_right_angled_riangle/: A_right_angled_riangle.cpp  A_right_angled_riangle.h
-Programming-Basics-CPP 6.3/Figure/An_equilateral_triangle/: An_equilateral_triangle.cpp  An_equilateral_triangle.h
-Programming-Basics-CPP 6.3/Figure/Isosceles_triangle/: Isosceles_triangle.cpp
-Programming-Basics-CPP 6.3/Figure/Parallelogram/: Parallelogram.cpp
-Programming-Basics-CPP 6.3/Figure/Rectangle/: Rectangle.cpp
-Programming-Basics-CPP 6.3/Figure/Rhomb/: Rhomb.cpp
-Programming-Basics-CPP 6.3/Figure/Square/: Square.cpp  Square.h
-Programming-Basics-CPP 6.3/Figure/The_quadrilateral/: The_quadrilateral.cpp  The_quadrilateral.h
-Programming-Basics-CPP 6.3/Figure/Triangle/: Triangle.cpp  Triangle.h
-Programming-Basics-CPP 6.3/Figure/figure/: Figure.cpp
-Programming-Basics-CPP 7.1/: CMakeLists.txt  main.cpp
-Programming-Basics-CPP 7.2/: CMakeLists.txt  main.cpp
-Programming-Basics-CPP 8.1/: CMakeLists.txt  main.cpp
-Programming-Basics-CPP 8.2/: CMakeLists.txt  README.md  main.cpp
-Programming-Basics-CPP 8.2/Figure/Isosceles_triangle/: Isosceles_triangle.cpp  (+1 more)
-Programming-Basics-CPP 8.2/checkingForErrors/: checking_for_errors.cpp  checking_for_errors.h
-Programming-Basics-CPP 9.1/: CMakeLists.txt  README.md  main.cpp
-Programming-Basics-CPP 9.2/: CMakeLists.txt  main.cpp
-Programming-basics-CPP 5.2/: CMakeLists.txt  README.md  main.cpp
-Programming-basics-CPP 5.3/: CMakeLists.txt  README.md  main.cpp
my_first_cmake_project/: my_first_cmake_program.cpp
untitled1/: source.cpp
(+15 files in other folders)
