cmake_minimum_required(VERSION 3.29)
project(_Programming_Basics_CPP_6_1)

set(CMAKE_CXX_STANDARD 20)

add_executable(_Programming_Basics_CPP_6_1 main.cpp



        output/output.h
        output/output.cpp
        math/math.h
        math/math.cpp
        math/math.cpp
        output/output.cpp
        math/math.cpp)
